form and other stuff

--- a/core-values.html
+++ b/core-values.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greynade</title>
+    <title>Core Values</title>
 </head>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/80bacdb160.js" crossorigin="anonymous"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="styles.css">
 
 
@@ -30,14 +28,14 @@
         <a href="/index.html" class="has-hover"><p>HOME</p></a>
         <br><br><br>
         <div>
-            <div class="page">
-                <h2 class="regular title1">Greynade - Honda Civic - Promotional Video</h2>
-                <p class="text-box left-align subtitle">Covering a passionate project for an awesome car that looks like no other.</p>
+            <div class="page width-hack">
+                <h2 class="regular title1">Core Values at Suraasa</h2>
+                <p class="text-box left-align subtitle">A journey to core values at suraasa.</p>
             </div>
         </div>
         <br>
         <div class="video-box-large has-hover">
-            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/mLrERRJ9XQY?si=j4F9HfrHEI2KDJXn"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/VQsPmbnnxfg?si=WEGGZkNPy3Xe6JTq"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <br>
 
