--- a/gearheads.html
+++ b/gearheads.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snowsurance</title>
+    <title>Gearheads POV</title>
 </head>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -30,21 +30,34 @@
         <a href="/index.html" class="has-hover"><p>HOME</p></a>
         <br><br><br>
         <div>
-            <div class="page">
-                <h2 class="regular title1">Snowsurance TV Commercial</h2>
-                <p class="text-box left-align subtitle">A 30 second story of the best they have to offer with design and aesthetics inpired by Apple's typography and minimal design.</p>
+            <div class="page width-hack">
+                <h2 class="regular title1">Gearheads - Branding & Production</h2>
+                <p class="text-box left-align subtitle">Helping my friend make the best car content on youtube.</p>
             </div>
         </div>
         <br>
+        <h2 class="regular title2">Logo</h2>
+        <p>Personal project</p>
+        <div class="video-box-large ">
+            <img src="/Public/casestudies/gearheadslogoinfo.jpg" alt="">
+        </div>
+        <div class="video-box-large ">
+            <img src="/Public/casestudies/gearheadslogo1.png" alt="">
+        </div>
+        <div class="video-box-large ">
+            <img src="/Public/casestudies/gearheadslogo2.png" alt="">
+        </div>
         <div class="video-box-large has-hover">
-            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/4HVo8e5Shxo?si=NWU5kV0Xw0DXGjoA"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/W4XVoLmB0RY?si=B6LUnTXa5N8IKqQ2"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <br>
-        <h2 class="regular title2">Storyboard</h2>
-        <br>
-        <div>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fdesign%2F7WGBVO32U8hWKwM561HYia%2FSnowsurance%3Fnode-id%3D0-1%26t%3DBzCvaUa8SAfnZ5tm-1" allowfullscreen></iframe>
+        <h2 class="regular title2">Showreel</h2>
+        <p>From going on shoots to editing at home, I have done all for the project, Here's a small montage of the best videos we've made so far!</p>
+        <div class="video-box-large has-hover">
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/MdQOOsRFrho?si=fcGgB58FT-bgM-Fy"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <br>
+
     </div>
     </div>
     <br>
