--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
-
 <body>
 <div class="main-page">
+    <div class="form-overlay nda-remove">
+    <iframe style="border:none;width:100%;" class="nda-form " id="my-form-kemp7u" src="https://opnform.com/forms/my-form-kemp7u"></iframe><script type="text/javascript" onload="initEmbed('my-form-kemp7u')" src="https://opnform.com/widgets/iframe.min.js"></script>
+    </div>    
     <div class="circle hover-cursor"></div>
     <div class="click">Click!</div>
     <div class="main-section">
@@ -38,8 +42,8 @@
                         <h2>Snowsurance TV Commercial</h2>
                         <p>A 30 second story of the best they have to offer with design and aesthetics inpired by Apple's typography and minimal design.</p>
                         <div class="flex">
-                            <p class="work-type red">Freelance</p>
-                            <p class="work-type blue">Motion Graphics, Art Direction</p>
+                            <p class="work-type blue">Freelance</p>
+                            <p class="work-type red">Motion Graphics, Art Direction</p>
                         </div>
                     </div>
                 </div>
@@ -57,8 +61,8 @@
                     <h2>3D Plaque Award Design</h2>
                     <p>Creating a plaque award for people completing anniversaries at the company</p>
                     <div class="flex">
-                        <p class="work-type red">Work</p>
-                        <p class="work-type blue">3D</p>
+                        <p class="work-type blue">Work</p>
+                        <p class="work-type red">3D</p>
                     </div>
                 </div>
             </div>
@@ -76,8 +80,8 @@
                         <h2>Logo Design - The Plains Co.</h2>
                         <p>A clean, friendly and minimal logo for a clothing brand focusing on cleaner designs</p>
                         <div class="flex">
-                            <p class="work-type red">Freelance</p>
-                            <p class="work-type blue">Branding</p>
+                            <p class="work-type blue">Freelance</p>
+                            <p class="work-type red">Branding</p>
                         </div>
                     </div>
                 </div>
@@ -85,7 +89,7 @@
         </div>
     </a>
     <br>
-    <a href="/" class="box1">
+    <div class="box1 nda-btn">
         <div class="box1 has-hover drop-shadow">
             <div class="flex-row">
                 <div class="video-box">
@@ -99,14 +103,14 @@
                         <h2>Stable Money Ads</h2>
                         <p>Adding delightful motion and end-slates to complete the light-hearted and entertaining ads.</p>
                         <div class="flex">
-                            <p class="work-type red">Freelance</p>
-                            <p class="work-type blue">Motion Graphics, CGI</p>
+                            <p class="work-type blue">Freelance</p>
+                            <p class="work-type red">Motion Graphics, CGI</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </a>
+    </div>
     <br>
     <a href="/logo-animations.html" class="box1">
         <div class="box1 has-hover drop-shadow">
@@ -119,8 +123,8 @@
                         <h2>Logo Animation Collection!</h2>
                         <p>All the best logo animations I have made so far!</p>
                         <div class="flex">
-                            <p class="work-type red">Personal + Work</p>
-                            <p class="work-type blue">Motion, Branding, Art Direction</p>
+                            <p class="work-type blue">Personal + Work</p>
+                            <p class="work-type red">Motion, Branding, Art Direction</p>
                         </div>
                     </div>
                 </div>
@@ -128,7 +132,7 @@
         </div>
     </a>
     <br>
-    <a href="/" class="box1">
+    <div class="box1 nda-btn">
         <div class="box1 has-hover drop-shadow">
             <div class="flex-row">
                 <div class="video-box">
@@ -142,14 +146,14 @@
                         <h2>Amazon Creatorverse Reel</h2>
                         <p>Adding delightful motion and end-slates to complete the light-hearted and entertaining ads.</p>
                         <div class="flex">
-                            <p class="work-type red">Freelance</p>
-                            <p class="work-type blue">Video Editing</p>
+                            <p class="work-type blue">Freelance</p>
+                            <p class="work-type red">Video Editing</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </a>
+    </div>
     <br>
     <a href="/greynade.html" class="box1">
         <div class="box1 has-hover drop-shadow">
@@ -162,15 +166,15 @@
                         <h2>Greynade - Honda Civic - Promotional Video</h2>
                         <p>Covering a passionate project for an awesome car that looks like no other.</p>
                         <div class="flex">
-                            <p class="work-type red">Freelance</p>
-                            <p class="work-type blue">Video Editing</p>
+                            <p class="work-type blue">Freelance</p>
+                            <p class="work-type red">Video Editing</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </a>
-    <a href="/" class="box1">
+    <div class="box1 nda-btn">
         <div class="box1 has-hover drop-shadow">
             <div class="flex-row">
                 <div class="video-box">
@@ -184,14 +188,74 @@
                         <h2>Suraasa Motion Design System</h2>
                         <p>Creating a guide to use motion efficiently ensuring a consistent and cohesive brand representation across various media.</p>
                         <div class="flex">
-                            <p class="work-type red">Work</p>
-                            <p class="work-type blue">Branding</p>
+                            <p class="work-type blue">Work</p>
+                            <p class="work-type red">Branding</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a href="/core-values.html" class="box1">
+        <div class="box1 has-hover drop-shadow">
+            <div class="flex-row">
+                <div class="video-box">
+                    <video src="/Public/thumbnails/core values thumbnail.mp4" autoplay loop playsinline muted></video>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <h2>Core Values at Suraasa</h2>
+                        <p>A journey to core values at suraasa.</p>
+                        <div class="flex">
+                            <p class="work-type blue">Work</p>
+                            <p class="work-type red">Motion, Art Direction</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </a>
+    <a href="/gearheads.html" class="box1">
+        <div class="box1 has-hover drop-shadow">
+            <div class="flex-row">
+                <div class="video-box">
+                    <video src="/Public/thumbnails/Gearheads Thumbnail2.mp4" autoplay loop playsinline muted></video>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <h2>Gearheads - Branding & Production</h2>
+                        <p>Helping my friend make the best car content on youtube.</p>
+                        <div class="flex">
+                            <p class="work-type blue">Personal</p>
+                            <p class="work-type red">Video Editing, Branding</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
+    <div class="box1 nda-btn">
+        <div class="box1 has-hover drop-shadow">
+            <div class="flex-row">
+                <div class="video-box">
+                    <img src="/Public/thumbnails/upstox-thumbnail.png" ></img>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <div class="background-box"><p>NDA</p></div>
+                    </div>
+                    <div>
+                        <h2>Upstox - Performance Ads</h2>
+                        <p>Maximising performance with motion intensive ads for upstox!</p>
+                        <div class="flex">
+                            <p class="work-type blue">Freelance</p>
+                            <p class="work-type red">Motion</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
     <br>
     <br>
