--- a/core-values.html
+++ b/core-values.html
@@ -14,7 +14,7 @@
 
 
 <body>
-    <div class="main-section width-100perc">
+    <div class="main-section">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
@@ -28,7 +28,7 @@
         <a href="/index.html" class="has-hover"><p>HOME</p></a>
         <br><br><br>
         <div>
-            <div class="page width-hack">
+            <div class="page ">
                 <h2 class="regular title1">Core Values at Suraasa</h2>
                 <p class="text-box left-align subtitle">A journey to core values at suraasa.</p>
             </div>
