--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 <link rel="stylesheet" href="styles.css">
 <body>
 <div class="main-page">
+    <div class="fixed-overlay has-hover">
+        <div class="button">
+            <a href="/contact.html" class="">
+                <h2>Contact Me!</h2>
+            </a>
+        </div>
+    </div>
     <div class="form-overlay nda-remove">
     <iframe style="border:none;width:100%;" class="nda-form " id="my-form-kemp7u" src="https://opnform.com/forms/my-form-kemp7u"></iframe><script type="text/javascript" onload="initEmbed('my-form-kemp7u')" src="https://opnform.com/widgets/iframe.min.js"></script>
     </div>    
@@ -73,7 +80,7 @@
         <div class="box1 drop-shadow ">
             <div>
                 <div class="flex-row">
-                    <div class="video-box container">
+                    <div class="video-box">
                         <img src="/Public/thumbnails/plainsco-thumbnail.jpg" alt="" class="">
                     </div>
                     <div class="text-box">
