--- a/core-values.html
+++ b/core-values.html
@@ -14,12 +14,20 @@
 
 
 <body>
+    <div class="fixed-overlay has-hover">
+        <div class="button">
+            <a href="/contact.html" class="">
+                <h2>Contact Me!</h2>
+            </a>
+        </div>
+    </div>
     <div class="main-section">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
     <div class="main-page">
+       
         <div class="circle hover-cursor"></div>
         <div class="click">Click!</div>
         <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
@@ -28,7 +36,7 @@
         <a href="/index.html" class="has-hover"><p>HOME</p></a>
         <br><br><br>
         <div>
-            <div class="page ">
+            <div class="page">
                 <h2 class="regular title1">Core Values at Suraasa</h2>
                 <p class="text-box left-align subtitle">A journey to core values at suraasa.</p>
             </div>
