--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </div>
                     <div>
                         <h2>Amazon Creatorverse Reel</h2>
-                        <p>Adding delightful motion and end-slates to complete the light-hearted and entertaining ads.</p>
+                        <p>A beautiful reel covering the highlights of the creators meetup hosted by Amazon.</p>
                         <div class="flex">
                             <p class="work-type blue">Freelance</p>
                             <p class="work-type red">Video Editing</p>
