--- a/plainsco.html
+++ b/plainsco.html
@@ -14,12 +14,20 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <body>
+    <div class="fixed-overlay has-hover">
+            <div class="button">
+                <a href="/contact.html" class="">
+                    <h2>Contact Me!</h2>
+                </a>
+            </div>
+        </div>
     <div class="main-section">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
     <div class="main-page width-100perc">
+        
     <div class="circle"></div>
     <div class="click">Click!</div>
     <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
