--- a/gearheads.html
+++ b/gearheads.html
@@ -16,12 +16,21 @@
 
 
 <body>
+    <div class="fixed-overlay has-hover">
+    <div class="button">
+        <a href="/contact.html" class="">
+            <h2>Contact Me!</h2>
+        </a>
+    </div>
+</div>
     <div class="main-section width-100perc">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
+    
     <div class="main-page">
+
         <div class="circle hover-cursor"></div>
         <div class="click">Click!</div>
         <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
