--- a/plaque.html
+++ b/plaque.html
@@ -16,12 +16,20 @@
 
 
 <body>
+    <div class="fixed-overlay has-hover">
+        <div class="button">
+            <a href="/contact.html" class="">
+                <h2>Contact Me!</h2>
+            </a>
+        </div>
+    </div>
     <div class="main-section">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
     <div class="main-page width-100perc">
+        
     <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
     <div class="circle"></div>
     <div class="click">Click!</div>
@@ -36,10 +44,7 @@
                 <p class="text-box left-align subtitle">A 30 second story of the best they have to offer with design and aesthetics inpired by Apple's typography and minimal design.</p>
             </div>
         </div>
-        <br><br><br><br>
-        <div class="video-box-large ">
-            <img src="/Public/plaque.png" alt="">
-        </div>
+        <br>
 
         <div class="video-box-large">
             <img src="/Public/plaque2.png" alt="">
