--- a/gearheads.html
+++ b/gearheads.html
@@ -17,10 +17,14 @@
 
 <body>
     <div class="fixed-overlay has-hover">
-    <div class="button">
-        <a href="/contact.html" class="">
-            <h2>Contact Me!</h2>
-        </a>
+        <div class="button">
+            <div class="btn-lottie">
+                <lottie-player src="Public/contact-lottie.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
+            </div>
+            <a href="/contact.html" class="">
+                <h2>Contact Me!</h2>
+            </a>
+        </div>
     </div>
 </div>
     <div class="main-section width-100perc">
@@ -46,7 +50,7 @@
         </div>
         <br>
         <h2 class="regular title2">Logo</h2>
-        <p>Personal project</p>
+        <p>After going through many iterations and ideas, this idea just clicked in our heads, and we immediately made a design.</p>
         <div class="video-box-large ">
             <img src="/Public/casestudies/gearheadslogoinfo.jpg" alt="">
         </div>
