--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <body>
 <div class="main-page">
     <div class="fixed-overlay has-hover">
+        
         <div class="button">
+            <div class="btn-lottie">
+                <lottie-player src="Public/contact-lottie.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
+            </div>
             <a href="/contact.html" class="">
                 <h2>Contact Me!</h2>
             </a>
