--- a/logo-animations.html
+++ b/logo-animations.html
@@ -17,12 +17,15 @@
 
 <body>
     <div class="fixed-overlay has-hover">
-            <div class="button">
-                <a href="/contact.html" class="">
-                    <h2>Contact Me!</h2>
-                </a>
+        <div class="button">
+            <div class="btn-lottie">
+                <lottie-player src="Public/contact-lottie.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
             </div>
+            <a href="/contact.html" class="">
+                <h2>Contact Me!</h2>
+            </a>
         </div>
+    </div>
     <div class="main-section width-100perc">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
