--- a/plainsco.html
+++ b/plainsco.html
@@ -15,12 +15,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <body>
     <div class="fixed-overlay has-hover">
-            <div class="button">
-                <a href="/contact.html" class="">
-                    <h2>Contact Me!</h2>
-                </a>
+        <div class="button">
+            <div class="btn-lottie">
+                <lottie-player src="Public/contact-lottie.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
             </div>
+            <a href="/contact.html" class="">
+                <h2>Contact Me!</h2>
+            </a>
         </div>
+    </div>
     <div class="main-section">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
