--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jai's Portfolio</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XS20BJC3KT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XS20BJC3KT');
+</script>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -207,6 +216,25 @@
             </div>
         </div>
     </div>
+    <a href="/minimal-avatars.html" class="box1">
+        <div class="box1 has-hover drop-shadow">
+            <div class="flex-row">
+                <div class="video-box">
+                    <video src="/Public/thumbnails/Minimal-Avatars-Thumbnail.mp4" autoplay loop playsinline muted></video>
+                </div>
+                <div class="text-box">
+                    <div>
+                        <h2>Minimal Avatars</h2>
+                        <p>Built a web application from scratch, launched on producthunt, got great feedback from their CEO!</p>
+                        <div class="flex">
+                            <p class="work-type blue">Personal</p>
+                            <p class="work-type red">Web Dev, Visual Design, Motion</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
     <a href="/core-values.html" class="box1">
         <div class="box1 has-hover drop-shadow">
             <div class="flex-row">
