--- a/minimal-avatars.html
+++ b/minimal-avatars.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greynade</title>
+    <title>Gearheads POV</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XS20BJC3KT"></script>
@@ -35,13 +35,15 @@
             </a>
         </div>
     </div>
+</div>
     <div class="main-section width-100perc">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
+    
     <div class="main-page">
-        
+
         <div class="circle hover-cursor"></div>
         <div class="click">Click!</div>
         <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
@@ -50,15 +52,21 @@
         <a href="/index.html" class="has-hover"><p>HOME</p></a>
         <br><br><br>
         <div>
-            <div class="page">
-                <h2 class="regular title1">Greynade - Honda Civic - Promotional Video</h2>
-                <p class="text-box left-align subtitle">Covering a passionate project for an awesome car that looks like no other.</p>
+            <div class="page width-hack">
+                <h2 class="regular title1">Minimal Avatars - Coding + Design</h2>
+                <p class="text-box left-align subtitle">Minimal Avatars is a unique design library for creating avatars. The idea started with creating an alternative for boring, default avatars on any online platform.</p>
             </div>
+            <a class="has-hover" href="https://www.producthunt.com/posts/minimal-avatars?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minimal&#0045;avatars" target="_blank"><img class="remove-clip" src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=297382&theme=light" alt="Minimal&#0032;Avatars - Create&#0032;minimal&#0044;&#0032;unique&#0032;and&#0032;playful&#0032;avatars&#0032;for&#0032;free | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
         </div>
         <br>
-        <div class="video-box-large has-hover">
-            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/mLrERRJ9XQY?si=j4F9HfrHEI2KDJXn"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="video-box-large ">
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/FRohownFAkU?si=I2GC2eRHGJcpjGL1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <a href="https://minimal.jaitomar.com">
+            <h2 class="has-hover" class="regular title2">www.minimal.jaitomar.com</h2>
+        </a>
+
+   
         <br>
 
     </div>
