--- a/minimal-avatars.html
+++ b/minimal-avatars.html
@@ -63,7 +63,7 @@
             <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/FRohownFAkU?si=I2GC2eRHGJcpjGL1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <a href="https://minimal.jaitomar.com">
-            <h2 class="has-hover" class="regular title2">www.minimal.jaitomar.com</h2>
+            <p class="has-hover" class="regular title2">www.minimal.jaitomar.com</p>
         </a>
 
    
