--- a/snowsurance.html
+++ b/snowsurance.html
@@ -57,7 +57,7 @@
         </div>
         <br>
         <div class="video-box-large has-hover">
-            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/4HVo8e5Shxo?si=NWU5kV0Xw0DXGjoA"YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/4HVo8e5Shxo?si=NWU5kV0Xw0DXGjoA" YouTube video player controls="0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <br>
         <h2 class="regular title2">Storyboard</h2>
