--- a/moneyfest.html
+++ b/moneyfest.html
@@ -71,7 +71,7 @@
         <div class="video-box-large">
             <img src="/Public/casestudies/4.png" alt="">
         </div>
-        <div class="video-box-large">
+        <div class="video-box-large casestudy-video">
             <video src="/Public/thumbnails/moneyfest lottie animation_1.mp4" autoplay playsinline loop muted></video>
         </div>
         <br>
