--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="circle hover-cursor-transparent"></div>
     <div class="click">Click!</div>
     <div class="hero-section">
-    <div class="main-section">
+    <div class="main-wrapper">
         <div class="hero-left">
             <canvas id="canvas1" class="canvas" width="373" height="529"></canvas>
         </div>
@@ -56,7 +56,7 @@
                       </a>
                 </div>
             </div>
-        </div>
+    </div>
     </div>
     </div>
     <div class="home-page">
