--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="home-page">
         <!-- <h2 class="align-center regular middle-text">Check out my work!</h2> -->
-    <br>
+    <h3>Check out my work!</h2>
     
     <a href="/fleek.html" class="box1">
             <div class="box1 has-hover drop-shadow">
