--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="flex-row2 hero-right-top">
                 <canvas id="canvas2" class="canvas" width="1102" height="320" ></canvas>
             </div>
-            <div class="hero-video hero-right-bottom">
+            <div class="hero-video hero-right-bottom has-hover">
                 <div class="hero-video-container">
                     <a id="video-link" href="#" target="_blank">
                         <div id="project-name"></div>                
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </a>
-            <a href="/snowsurance.html" class="box1">
+            <a href="/interaction-design.html" class="box1">
             <div class="box1 has-hover drop-shadow">
                 <div class="flex-row">
                     <div class="video-box">
@@ -133,7 +133,7 @@
                     <div class="text-box">
       
                         <div>
-                            <h2>Ghost Projectors - Product Video</h2>
+                            <h2>Ghost Projectors - 3D Product Video</h2>
                             <p>A visual story showcasing the features of a new projector in the market</p>
                             <div class="flex">
                                 <p class="work-type blue">Freelance</p>
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </a>    
-        <a href="/snowsurance.html" class="box1">
+        <a href="/ito.html" class="box1">
             <div class="box1 has-hover drop-shadow">
                 <div class="flex-row">
                     <div class="video-box">
