--- a/interaction-design.html
+++ b/interaction-design.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Collection - Everything UI UX</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XS20BJC3KT"></script>
@@ -22,16 +22,26 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
-<script src="https://kit.fontawesome.com/eb2f59bcb6.js" crossorigin="anonymous"></script>
 
 
 <body>
+    <div class="fixed-overlay has-hover">
+        <div class="button">
+            <div class="btn-lottie">
+                <lottie-player src="Public/contact-lottie.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
+            </div>
+            <a href="/contact.html" class="">
+                <h2>Contact Me!</h2>
+            </a>
+        </div>
+    </div>
     <div class="main-section width-100perc">
         <div class="inner-section height-change">
             <lottie-player src="Public/decoration-line.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
         </div>
     </div>
     <div class="main-page">
+        
         <div class="circle hover-cursor"></div>
         <div class="click">Click!</div>
         <button class="backToTopBtn has-hover"><i class="fas fa-angle-up"></i></button>
@@ -39,32 +49,22 @@
         <br><br><br>
         <a href="/index.html" class="has-hover"><p>HOME</p></a>
         <br><br><br>
-        <div class="contact-lottie">
-
-            <lottie-player src="Public/contact-lottie.json" background="transparent"  speed=".9"   loop  autoplay></lottie-player>
-        </div>
         <div>
             <div class="page">
-                <h2 class="regular title1">Contact Me!</h2>
-                <p class="text-box left-align subtitle">With 5 years of experience across multiple design disciplines—including graphic design, branding, 3D, and motion—I’ve honed my skills in every stage of the creative process. From brainstorming and ideation to meticulous planning, storyboarding, and delivering polished final products, I’ve successfully tackled a wide range of projects, bringing innovative ideas to life.</p>
+                <h2 class="regular title1">Collection - Everything UI UX</h2>
+                <p class="text-box left-align subtitle">A visual collection of UI/UX animations and micro-interactions. </p>
             </div>
         </div>
         <br>
-        <p class="regular title2">jaytomar26@gmail.com</p>
-        <div class="">
-            <div class="row">
-                <a href="https://www.linkedin.com/in/jaytomar/" target=”_blank” >
-                    <i class="fa-brands fa-linkedin fa-5x" style="color: black;"></i>
-                </a>
-                <a href="https://www.instagram.com/jaiissleeping/" target=”_blank” >
-                    <i class="fa-brands fa-instagram fa-5x" style="color: black;"></i>
-                </a>
-            </div>
+        <div class="video-box-large has-hover">
+            <iframe width="560" height="370" src="https://www.youtube-nocookie.com/embed/3nRu4Qbuge8?si=1OfxZfOeBMYN_A36" YouTube video player controls="0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        
         <br>
-
-
+        <!-- <h2 class="regular title2">Storyboard</h2>
+        <br>
+        <div>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fdesign%2F7WGBVO32U8hWKwM561HYia%2FSnowsurance%3Fnode-id%3D0-1%26t%3DBzCvaUa8SAfnZ5tm-1" allowfullscreen></iframe>
+        </div> -->
     </div>
     </div>
     <br>
